--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
   },
   "homepage": "https://github.com/yoon-bomi/Web-Automation-PreTest#readme",
   "devDependencies": {
+    "@types/hapi__joi": "^17.1.8",
     "@types/node": "^16.11.10",
     "jest": "^28.0.3",
     "ts-node": "10.7.0",
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.1",
     "@koa/cors": "^3.3.0",
-    "@types/hapi__joi": "^17.1.8",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.10",
     "koa": "^2.13.4",
+    "koa-joi-router": "^6.0.2",
     "mysql": "^2.18.1",
     "node-json-db": "^1.5.0",
     "pg": "^8.4.0",
