--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql": "^2.18.1",
     "node-json-db": "^1.5.0",
     "pg": "^8.4.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0"
   }
 }
