--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/yoon-bomi/Web-Automation-PreTest#readme",
   "devDependencies": {
     "@types/hapi__joi": "^17.1.8",
-    "@types/node": "^16.11.10",
+    "@types/node": "^16.11.33",
+    "@types/selenium-webdriver": "^4.0.19",
     "jest": "^28.0.3",
     "ts-node": "10.7.0",
     "typescript": "4.5.2"
@@ -37,6 +38,6 @@
     "node-json-db": "^1.5.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
-    "typedi": "^0.10.0"
+    "selenium-webdriver": "^4.1.2"
   }
 }
