refactor : update tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,10 @@
 {
   "include": ["src"],
   "compilerOptions": {
-    "lib": ["es5", "es6"],
-    "target": "es5",
     "module": "commonjs",
-    "moduleResolution": "node",
     "baseUrl": "./src",
     "outDir": "./dist",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
+    "useUnknownInCatchVariables": false,
     "typeRoots": ["./node_modules/@types", "src/@types"]
   }
 }
