--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "typescript": "4.5.2"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.0",
     "@hapi/joi": "^15.1.1",
     "@koa/cors": "^3.3.0",
     "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.10",
     "koa": "^2.13.4",
     "koa-joi-router": "^6.0.2",
     "mysql": "^2.18.1",
