--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "start:dev": "nodemon --watch 'src/**/*' -e ts --exec ts-node ./src/server.ts",
-    "test": "jest ."
+    "test": "jest --config jest.config.js"
   },
   "repository": {
     "type": "git",
@@ -21,8 +21,10 @@
   "homepage": "https://github.com/yoon-bomi/Web-Automation-PreTest#readme",
   "devDependencies": {
     "@types/hapi__joi": "^17.1.8",
+    "@types/jest": "^27.5.0",
     "@types/node": "^16.11.33",
     "@types/selenium-webdriver": "^4.0.19",
+    "dotenv": "^16.0.0",
     "jest": "^28.0.3",
     "ts-node": "10.7.0",
     "typescript": "4.5.2"
@@ -31,10 +33,11 @@
     "@hapi/boom": "^10.0.0",
     "@hapi/joi": "^15.1.1",
     "@koa/cors": "^3.3.0",
+    "@sentry/node": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
     "axios": "^0.27.2",
     "koa": "^2.13.4",
     "koa-joi-router": "^6.0.2",
-    "mysql": "^2.18.1",
     "node-json-db": "^1.5.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
